Changes for 1.3.2.1
* Small fixes to exporter classes. (edwin van der wal)

* Balancing fixes for Pact of Steel 2. (veqryn)

* Fixed issue with carriers that are also transports not allowing their land units to participate in battle when the sea unit has participated in battle. (veqryn)

* Added many new admin features to lobby server and client. (wisconsin)

* Added ability to export a savegame to an xml, thereby allowing in game editing of maps. (edwin van der wal)

* Added new game property, "Neutral Flyover Allowed", which like it says, will allow you to fly over neutrals. (veqryn)

* Fixed bug in movement validation that allowed paths over impassibles and restricted territories to be taken into account for landing zones. (veqryn)

* Fixed bug in movement validation that allowed both combat and noncombat flyover of neutrals. (veqryn)

* Fixed bug in movement validation for paratroopers and mechanized infantry techs when a unit has received bonus movement from an airfield or harbour. (veqryn)

* Several small changes to Middle Earth, Big World v3 rules, and Pact of Steel 2. (veqryn)

* Fixed to allow old Mac OS X computers to connect to lobby, again. (veqryn)

* Small fix to validation of user data for lobby. (veqryn)

* Fixed bug where allied fighters on carriers were not moving with the carriers under certain situations, like when there was an transport ship in the same sea zone, or a harbour or airfield had modified their movement. (veqryn)


Changes for 1.3.1.1
* Allowing lobby to parse user data more effectively. (wisconsin & veqryn)

* Fixed major bug in low luck support attachments, where units got up to double the support they were supposed to get. (veqryn)

* Fixed Dynamix settings menu to use java 1.5 compatible coding, instead of java 1.6.  With this change, and the removal of string isEmpty calls, TripleA is once again compatible with java 1.5 and Mac OS computers. (wisconsin)
